<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="25dp"
            android:text="@string/optionTitle"
            android:lineSpacingExtra="3dp"
            android:textColor="@color/grey"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:id="@+id/categoryMove"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:text="@string/categoryMove"
            android:gravity="center_vertical"
            android:textSize="19dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/itemRemove"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:text="@string/itemRemove"
            android:gravity="center_vertical"
            android:textSize="19dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:text="@string/share"
            android:gravity="center_vertical"
            android:textSize="19dp"
            android:textColor="@color/black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            android:layout_marginBottom="10dp"/>
        
        <TextView
            android:id="@+id/cancel"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:textSize="18dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            />


    </LinearLayout>
</FrameLayout>